@@ -1,3 +1,9 @@
+2005-09-29  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* doc/mathfunc.n:   implementation for TIP #255, expr min/max
+	* library/init.tcl:
+	* tests/info.test, tests/expr-old.test: 
+
 2005-09-27  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
 	* tests/binary.test (binary-14.18): Added test for [Bug 1116542]
